EXHIBIT - Factored out thumbnail container class decision from within _reconstruct function so it's easier to change. - Changed div.exhibit-thumbnailView-itemContainer-IE as Niels Mayer suggested to avoid thumbnails from overlapping in XHTML documents on IE.

--- a/exhibit/trunk/src/webapp/api/styles/views/thumbnail-view.css
+++ b/exhibit/trunk/src/webapp/api/styles/views/thumbnail-view.css
@@ -11,6 +11,4 @@ div.exhibit-thumbnailView-itemContainer {
 
 div.exhibit-thumbnailView-itemContainer-IE {
     float:      left;
-    width:      0;
-    overflow:   visible;
 }
